--- a/_posts/2016-01-29-Note.md
+++ b/_posts/2016-01-29-Note.md
@@ -5,15 +5,27 @@ description: "初次使用Github的小白，备注一些东西避免遗忘"
 category: 'Github'
 ---
 
-使用工具：1、Git：用来同步本地的项目文件和Web项目文件
-          2、Notepad++：用于编辑修改文件。
-		  3、模板：使用的是陈汝丹的模板 http://chenrudan.github.io/
+使用工具：
 
-1、将本地模板与Web库关联指令：
-   使用Git Bash Here, 输入：git clone “https://github.com/username/username.github.io.git”
-2、编好的内容推送到网上，输入的指令：
-   （1）git status
-   （2）git add
-   （3）git commit -m “your comments”
-   （4）git push origin master
+	1、Git：用来同步本地的项目文件和Web项目文件
+          
+	2、Notepad++：用于编辑修改文件。
+
+	3、模板：使用的是陈汝丹的模板 http://chenrudan.github.io/
+
+指令：
+
+	1、将本地模板与Web库关联指令：
+
+		使用Git Bash Here, 输入：git clone “https://github.com/username/username.github.io.git”
+   
+	2、编好的内容推送到网上，输入的指令：
+
+		（1）git status
+   
+		（2）git add
+   
+		（3）git commit -m “your comments”
+   
+		（4）git push origin master
 
